--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://praveentelukala55:Praveen2203@cluster0.xecoxwp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://praveentelukala55:password of mangodb@cluster0.xecoxwp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
